// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build/kodetre.json har antall rader 1`] = `180061`;

exports[`build/kodetre.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 180061,
    "forelder": Object {
      "count": 180061,
    },
    "kode": Object {
      "count": 180061,
    },
    "tittel": Object {
      "_": Object {
        "count": 252904,
      },
      "count": 180061,
    },
  },
}
`;

exports[`build/kodetre_postgres.json har antall rader 1`] = `180062`;

exports[`build/kodetre_postgres.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 180062,
    "delAv": Object {
      "_": Object {
        "count": 1404658,
      },
      "count": 180062,
    },
    "index": Object {
      "count": 180062,
    },
    "kode": Object {
      "count": 180062,
    },
    "max": Object {
      "count": 40,
    },
    "min": Object {
      "count": 40,
    },
    "nivå": Object {
      "count": 180062,
    },
    "tittel": Object {
      "_": Object {
        "count": 252905,
      },
      "count": 180062,
    },
  },
}
`;

exports[`data/ao_naturvernområde.json har antall rader 1`] = `458`;

exports[`data/ao_naturvernområde.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 458,
    "foreldre": Object {
      "_": Object {
        "count": 36,
      },
      "count": 36,
    },
    "relasjon": Object {
      "_": Object {
        "count": 18,
        "erSubset": Object {
          "count": 18,
        },
        "kant": Object {
          "count": 18,
        },
        "kantRetur": Object {
          "count": 18,
        },
        "kode": Object {
          "count": 18,
        },
      },
      "count": 18,
    },
    "tittel": Object {
      "_": Object {
        "count": 458,
      },
      "count": 458,
    },
  },
}
`;

exports[`data/ar_diagnostisk_art.json har antall rader 1`] = `166`;

exports[`data/ar_diagnostisk_art.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 166,
    "relasjon": Object {
      "_": Object {
        "count": 6198,
        "kant": Object {
          "count": 6198,
        },
        "kantRetur": Object {
          "count": 6198,
        },
        "kode": Object {
          "count": 6198,
        },
      },
      "count": 166,
    },
  },
}
`;

exports[`data/ar_taxon.json har antall rader 1`] = `171042`;

exports[`data/ar_taxon.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 171042,
    "foreldre": Object {
      "_": Object {
        "count": 171042,
      },
      "count": 171042,
    },
    "infoUrl": Object {
      "count": 171042,
    },
    "tittel": Object {
      "_": Object {
        "count": 243580,
      },
      "count": 171042,
    },
    "url": Object {
      "count": 171042,
    },
  },
}
`;

exports[`data/ar_taxon_to_json.json har antall rader 1`] = `171042`;

exports[`data/ar_taxon_to_json.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "_": Object {
      "count": 171042,
    },
    "count": 171042,
    "parentId": Object {
      "count": 171031,
    },
    "tittel": Object {
      "_": Object {
        "count": 243580,
      },
      "count": 171042,
    },
  },
}
`;

exports[`data/farger.json har antall rader 1`] = `161`;

exports[`data/farger.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 161,
  },
}
`;

exports[`data/full.json har antall rader 1`] = `180060`;

exports[`data/full.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "_": Object {
      "count": 297,
    },
    "betegnelse": Object {
      "_": Object {
        "count": 3305,
      },
      "count": 3305,
    },
    "count": 180059,
    "data": Object {
      "areal": Object {
        "count": 2865,
      },
      "count": 2865,
      "forvaltningsmyndighet": Object {
        "count": 2865,
      },
      "iucn": Object {
        "count": 2819,
      },
      "revisjonsdato": Object {
        "count": 320,
      },
      "truetvurdering": Object {
        "count": 2794,
      },
      "vernedato": Object {
        "count": 2865,
      },
      "verneform": Object {
        "count": 2865,
      },
      "verneplan": Object {
        "count": 2865,
      },
    },
    "farge": Object {
      "count": 17,
    },
    "foreldre": Object {
      "_": Object {
        "count": 180060,
      },
      "count": 180059,
    },
    "infoUrl": Object {
      "count": 174674,
    },
    "ingress": Object {
      "count": 133,
    },
    "max": Object {
      "count": 48,
    },
    "metaUrl": Object {
      "count": 7,
    },
    "min": Object {
      "count": 48,
    },
    "naturlandskap": Object {
      "count": 297,
    },
    "nivå": Object {
      "count": 37,
    },
    "relasjon": Object {
      "_": Object {
        "count": 32277,
        "erSubset": Object {
          "count": 26098,
        },
        "kant": Object {
          "count": 32277,
        },
        "kantRetur": Object {
          "count": 32277,
        },
        "kode": Object {
          "count": 32277,
        },
      },
      "count": 3147,
    },
    "relasjoner": Object {
      "_": Object {
        "count": 1555,
        "kant": Object {
          "count": 1555,
        },
        "kantRetur": Object {
          "count": 1555,
        },
        "kode": Object {
          "count": 1555,
        },
      },
      "count": 288,
    },
    "render": Object {
      "count": 1,
    },
    "skjul": Object {
      "count": 1,
    },
    "sortering": Object {
      "count": 19,
    },
    "stats": Object {
      "areal": Object {
        "count": 3711,
      },
      "arealPrefix": Object {
        "count": 3711,
      },
      "count": 3711,
      "geometrier": Object {
        "count": 3711,
      },
      "geometrierPrefix": Object {
        "count": 3711,
      },
    },
    "tittel": Object {
      "_": Object {
        "count": 252902,
      },
      "count": 180059,
    },
    "type": Object {
      "count": 5,
    },
    "url": Object {
      "count": 171042,
    },
    "utenRamme": Object {
      "count": 20,
    },
  },
  "~": Object {
    "count": 1,
    "foreldre": Object {
      "count": 1,
    },
    "tittel": Object {
      "_": Object {
        "count": 1,
      },
      "count": 1,
    },
  },
}
`;

exports[`data/full_med_graf.json har antall rader 1`] = `180060`;

exports[`data/full_med_graf.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "_": Object {
      "count": 297,
    },
    "betegnelse": Object {
      "_": Object {
        "count": 3305,
      },
      "count": 3305,
    },
    "count": 180059,
    "data": Object {
      "areal": Object {
        "count": 2865,
      },
      "count": 2865,
      "forvaltningsmyndighet": Object {
        "count": 2865,
      },
      "iucn": Object {
        "count": 2819,
      },
      "revisjonsdato": Object {
        "count": 320,
      },
      "truetvurdering": Object {
        "count": 2794,
      },
      "vernedato": Object {
        "count": 2865,
      },
      "verneform": Object {
        "count": 2865,
      },
      "verneplan": Object {
        "count": 2865,
      },
    },
    "farge": Object {
      "count": 17,
    },
    "foreldre": Object {
      "_": Object {
        "count": 180060,
      },
      "count": 180059,
    },
    "graf": Object {
      "_": Object {
        "_": Object {
          "count": 5235,
          "tittel": Object {
            "_": Object {
              "count": 15134,
            },
            "count": 5235,
          },
        },
        "count": 577,
      },
      "count": 4245,
      "definerer hovedtype": Object {
        "_": Object {
          "count": 184,
          "erSubset": Object {
            "count": 184,
          },
          "tittel": Object {
            "_": Object {
              "count": 184,
            },
            "count": 184,
          },
        },
        "count": 37,
      },
      "definisjonsgrunnlag": Object {
        "_": Object {
          "count": 92,
          "erSubset": Object {
            "count": 92,
          },
          "tittel": Object {
            "_": Object {
              "count": 92,
            },
            "count": 92,
          },
        },
        "count": 92,
      },
      "forvalter": Object {
        "_": Object {
          "count": 2883,
          "erSubset": Object {
            "count": 2883,
          },
          "tittel": Object {
            "_": Object {
              "count": 2883,
            },
            "count": 2883,
          },
        },
        "count": 24,
      },
      "forvaltes av": Object {
        "_": Object {
          "count": 2865,
          "erSubset": Object {
            "count": 2865,
          },
          "tittel": Object {
            "_": Object {
              "count": 2865,
            },
            "count": 2865,
          },
        },
        "count": 2865,
      },
      "habitat": Object {
        "_": Object {
          "count": 4893,
          "erSubset": Object {
            "count": 4893,
          },
          "tittel": Object {
            "_": Object {
              "count": 4893,
            },
            "count": 4893,
          },
        },
        "count": 1001,
      },
      "mengdeart": Object {
        "_": Object {
          "count": 280,
          "tittel": Object {
            "_": Object {
              "count": 817,
            },
            "count": 280,
          },
        },
        "count": 90,
      },
      "prosedyrekategori": Object {
        "_": Object {
          "count": 92,
          "erSubset": Object {
            "count": 92,
          },
          "tittel": Object {
            "_": Object {
              "count": 92,
            },
            "count": 92,
          },
        },
        "count": 92,
      },
      "publisererer": Object {
        "_": Object {
          "count": 7,
          "erSubset": Object {
            "count": 7,
          },
          "tittel": Object {
            "_": Object {
              "count": 7,
            },
            "count": 7,
          },
        },
        "count": 4,
      },
      "publiseres av": Object {
        "_": Object {
          "count": 7,
          "erSubset": Object {
            "count": 7,
          },
          "tittel": Object {
            "_": Object {
              "count": 8,
            },
            "count": 7,
          },
        },
        "count": 6,
      },
      "skilleart": Object {
        "_": Object {
          "count": 47,
          "tittel": Object {
            "_": Object {
              "count": 141,
            },
            "count": 47,
          },
        },
        "count": 13,
      },
      "truet vurdering": Object {
        "_": Object {
          "count": 5496,
          "erSubset": Object {
            "count": 5496,
          },
          "tittel": Object {
            "_": Object {
              "count": 5496,
            },
            "count": 5496,
          },
        },
        "count": 2752,
      },
      "tyngdepunktart": Object {
        "_": Object {
          "count": 584,
          "tittel": Object {
            "_": Object {
              "count": 1657,
            },
            "count": 584,
          },
        },
        "count": 112,
      },
      "verneform": Object {
        "_": Object {
          "count": 5730,
          "erSubset": Object {
            "count": 5730,
          },
          "tittel": Object {
            "_": Object {
              "count": 5730,
            },
            "count": 5730,
          },
        },
        "count": 2885,
      },
      "verneområder som forvaltes av": Object {
        "_": Object {
          "count": 18,
          "erSubset": Object {
            "count": 18,
          },
          "tittel": Object {
            "_": Object {
              "count": 18,
            },
            "count": 18,
          },
        },
        "count": 18,
      },
      "verneplan": Object {
        "_": Object {
          "count": 5730,
          "erSubset": Object {
            "count": 5730,
          },
          "tittel": Object {
            "_": Object {
              "count": 5730,
            },
            "count": 5730,
          },
        },
        "count": 2875,
      },
    },
    "infoUrl": Object {
      "count": 174674,
    },
    "ingress": Object {
      "count": 133,
    },
    "max": Object {
      "count": 48,
    },
    "metaUrl": Object {
      "count": 7,
    },
    "min": Object {
      "count": 48,
    },
    "naturlandskap": Object {
      "count": 297,
    },
    "nivå": Object {
      "count": 37,
    },
    "relasjoner": Object {
      "_": Object {
        "count": 1555,
        "kant": Object {
          "count": 1555,
        },
        "kantRetur": Object {
          "count": 1555,
        },
        "kode": Object {
          "count": 1555,
        },
      },
      "count": 288,
    },
    "render": Object {
      "count": 1,
    },
    "skjul": Object {
      "count": 1,
    },
    "sortering": Object {
      "count": 19,
    },
    "stats": Object {
      "areal": Object {
        "count": 3711,
      },
      "arealPrefix": Object {
        "count": 3711,
      },
      "count": 3711,
      "geometrier": Object {
        "count": 3711,
      },
      "geometrierPrefix": Object {
        "count": 3711,
      },
    },
    "tittel": Object {
      "_": Object {
        "count": 252902,
      },
      "count": 180059,
    },
    "type": Object {
      "count": 5,
    },
    "url": Object {
      "count": 171042,
    },
    "utenRamme": Object {
      "count": 20,
    },
  },
  "~": Object {
    "count": 1,
    "foreldre": Object {
      "count": 1,
    },
    "tittel": Object {
      "_": Object {
        "count": 1,
      },
      "count": 1,
    },
  },
}
`;

exports[`data/full_med_rid.json har antall rader 1`] = `180060`;

exports[`data/full_med_rid.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "_": Object {
      "count": 297,
    },
    "betegnelse": Object {
      "_": Object {
        "count": 3305,
      },
      "count": 3305,
    },
    "count": 180059,
    "data": Object {
      "areal": Object {
        "count": 2865,
      },
      "count": 2865,
      "forvaltningsmyndighet": Object {
        "count": 2865,
      },
      "iucn": Object {
        "count": 2819,
      },
      "revisjonsdato": Object {
        "count": 320,
      },
      "truetvurdering": Object {
        "count": 2794,
      },
      "vernedato": Object {
        "count": 2865,
      },
      "verneform": Object {
        "count": 2865,
      },
      "verneplan": Object {
        "count": 2865,
      },
    },
    "farge": Object {
      "count": 17,
    },
    "foreldre": Object {
      "_": Object {
        "count": 180060,
      },
      "count": 180059,
    },
    "graf": Object {
      "_": Object {
        "_": Object {
          "count": 5235,
          "tittel": Object {
            "_": Object {
              "count": 15134,
            },
            "count": 5235,
          },
        },
        "count": 577,
      },
      "count": 4245,
      "definerer hovedtype": Object {
        "_": Object {
          "count": 184,
          "erSubset": Object {
            "count": 184,
          },
          "tittel": Object {
            "_": Object {
              "count": 184,
            },
            "count": 184,
          },
        },
        "count": 37,
      },
      "definisjonsgrunnlag": Object {
        "_": Object {
          "count": 92,
          "erSubset": Object {
            "count": 92,
          },
          "tittel": Object {
            "_": Object {
              "count": 92,
            },
            "count": 92,
          },
        },
        "count": 92,
      },
      "forvalter": Object {
        "_": Object {
          "count": 2883,
          "erSubset": Object {
            "count": 2883,
          },
          "tittel": Object {
            "_": Object {
              "count": 2883,
            },
            "count": 2883,
          },
        },
        "count": 24,
      },
      "forvaltes av": Object {
        "_": Object {
          "count": 2865,
          "erSubset": Object {
            "count": 2865,
          },
          "tittel": Object {
            "_": Object {
              "count": 2865,
            },
            "count": 2865,
          },
        },
        "count": 2865,
      },
      "habitat": Object {
        "_": Object {
          "count": 4893,
          "erSubset": Object {
            "count": 4893,
          },
          "tittel": Object {
            "_": Object {
              "count": 4893,
            },
            "count": 4893,
          },
        },
        "count": 1001,
      },
      "mengdeart": Object {
        "_": Object {
          "count": 280,
          "tittel": Object {
            "_": Object {
              "count": 817,
            },
            "count": 280,
          },
        },
        "count": 90,
      },
      "prosedyrekategori": Object {
        "_": Object {
          "count": 92,
          "erSubset": Object {
            "count": 92,
          },
          "tittel": Object {
            "_": Object {
              "count": 92,
            },
            "count": 92,
          },
        },
        "count": 92,
      },
      "publisererer": Object {
        "_": Object {
          "count": 7,
          "erSubset": Object {
            "count": 7,
          },
          "tittel": Object {
            "_": Object {
              "count": 7,
            },
            "count": 7,
          },
        },
        "count": 4,
      },
      "publiseres av": Object {
        "_": Object {
          "count": 7,
          "erSubset": Object {
            "count": 7,
          },
          "tittel": Object {
            "_": Object {
              "count": 8,
            },
            "count": 7,
          },
        },
        "count": 6,
      },
      "skilleart": Object {
        "_": Object {
          "count": 47,
          "tittel": Object {
            "_": Object {
              "count": 141,
            },
            "count": 47,
          },
        },
        "count": 13,
      },
      "truet vurdering": Object {
        "_": Object {
          "count": 5496,
          "erSubset": Object {
            "count": 5496,
          },
          "tittel": Object {
            "_": Object {
              "count": 5496,
            },
            "count": 5496,
          },
        },
        "count": 2752,
      },
      "tyngdepunktart": Object {
        "_": Object {
          "count": 584,
          "tittel": Object {
            "_": Object {
              "count": 1657,
            },
            "count": 584,
          },
        },
        "count": 112,
      },
      "verneform": Object {
        "_": Object {
          "count": 5730,
          "erSubset": Object {
            "count": 5730,
          },
          "tittel": Object {
            "_": Object {
              "count": 5730,
            },
            "count": 5730,
          },
        },
        "count": 2885,
      },
      "verneområder som forvaltes av": Object {
        "_": Object {
          "count": 18,
          "erSubset": Object {
            "count": 18,
          },
          "tittel": Object {
            "_": Object {
              "count": 18,
            },
            "count": 18,
          },
        },
        "count": 18,
      },
      "verneplan": Object {
        "_": Object {
          "count": 5730,
          "erSubset": Object {
            "count": 5730,
          },
          "tittel": Object {
            "_": Object {
              "count": 5730,
            },
            "count": 5730,
          },
        },
        "count": 2875,
      },
    },
    "index": Object {
      "count": 180059,
    },
    "infoUrl": Object {
      "count": 174674,
    },
    "ingress": Object {
      "count": 133,
    },
    "max": Object {
      "count": 48,
    },
    "metaUrl": Object {
      "count": 7,
    },
    "min": Object {
      "count": 48,
    },
    "naturlandskap": Object {
      "count": 297,
    },
    "nivå": Object {
      "count": 37,
    },
    "relasjoner": Object {
      "_": Object {
        "count": 1555,
        "kant": Object {
          "count": 1555,
        },
        "kantRetur": Object {
          "count": 1555,
        },
        "kode": Object {
          "count": 1555,
        },
      },
      "count": 288,
    },
    "render": Object {
      "count": 1,
    },
    "skjul": Object {
      "count": 1,
    },
    "sortering": Object {
      "count": 19,
    },
    "stats": Object {
      "areal": Object {
        "count": 3711,
      },
      "arealPrefix": Object {
        "count": 3711,
      },
      "count": 3711,
      "geometrier": Object {
        "count": 3711,
      },
      "geometrierPrefix": Object {
        "count": 3711,
      },
    },
    "tittel": Object {
      "_": Object {
        "count": 252902,
      },
      "count": 180059,
    },
    "type": Object {
      "count": 5,
    },
    "url": Object {
      "count": 171042,
    },
    "utenRamme": Object {
      "count": 20,
    },
  },
  "~": Object {
    "count": 1,
    "foreldre": Object {
      "count": 1,
    },
    "index": Object {
      "count": 1,
    },
    "tittel": Object {
      "_": Object {
        "count": 1,
      },
      "count": 1,
    },
  },
}
`;

exports[`data/inn_ao_fylke.json har antall rader 1`] = `18`;

exports[`data/inn_ao_fylke.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "betegnelse": Object {
      "_": Object {
        "count": 18,
      },
      "count": 18,
    },
    "count": 18,
    "tittel": Object {
      "_": Object {
        "count": 18,
      },
      "count": 18,
    },
    "utenRamme": Object {
      "count": 18,
    },
  },
}
`;

exports[`data/inn_ao_kommune.json har antall rader 1`] = `422`;

exports[`data/inn_ao_kommune.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "betegnelse": Object {
      "_": Object {
        "count": 422,
      },
      "count": 422,
    },
    "count": 422,
    "tittel": Object {
      "_": Object {
        "count": 422,
      },
      "count": 422,
    },
  },
}
`;

exports[`data/inn_mbtiles.json har antall rader 1`] = `5487`;

exports[`data/inn_mbtiles.json har forventede nøkler 1`] = `
Object {
  "/basemap/openstreetmap": Object {
    "_": Object {
      "count": 2,
    },
    "attribution": Object {
      "count": 1,
    },
    "basename": Object {
      "count": 1,
    },
    "bounds": Object {
      "count": 1,
    },
    "center": Object {
      "count": 1,
    },
    "count": 1,
    "description": Object {
      "count": 1,
    },
    "format": Object {
      "count": 1,
    },
    "maskLevel": Object {
      "count": 1,
    },
    "maxzoom": Object {
      "count": 1,
    },
    "minzoom": Object {
      "count": 1,
    },
    "modified": Object {
      "count": 1,
    },
    "mtime": Object {
      "count": 1,
    },
    "name": Object {
      "count": 1,
    },
    "planettime": Object {
      "count": 1,
    },
    "version": Object {
      "count": 1,
    },
  },
  "/metabase/meta": Object {
    "count": 1,
  },
  "/point/OR": Object {
    "count": 1,
    "modified": Object {
      "count": 1,
    },
  },
  "/polygon/AO": Object {
    "bounds": Object {
      "count": 1,
    },
    "center": Object {
      "count": 1,
    },
    "count": 1,
    "description": Object {
      "count": 1,
    },
    "format": Object {
      "count": 1,
    },
    "maxzoom": Object {
      "count": 1,
    },
    "minzoom": Object {
      "count": 1,
    },
    "modified": Object {
      "count": 1,
    },
    "name": Object {
      "count": 1,
    },
    "type": Object {
      "count": 1,
    },
    "version": Object {
      "count": 1,
    },
  },
  "/polygon/BS": Object {
    "bounds": Object {
      "count": 1,
    },
    "center": Object {
      "count": 1,
    },
    "count": 1,
    "description": Object {
      "count": 1,
    },
    "format": Object {
      "count": 1,
    },
    "maxzoom": Object {
      "count": 1,
    },
    "minzoom": Object {
      "count": 1,
    },
    "modified": Object {
      "count": 1,
    },
    "name": Object {
      "count": 1,
    },
    "type": Object {
      "count": 1,
    },
    "version": Object {
      "count": 1,
    },
  },
  "/polygon/LA": Object {
    "bounds": Object {
      "count": 1,
    },
    "center": Object {
      "count": 1,
    },
    "count": 1,
    "description": Object {
      "count": 1,
    },
    "format": Object {
      "count": 1,
    },
    "maxzoom": Object {
      "count": 1,
    },
    "minzoom": Object {
      "count": 1,
    },
    "modified": Object {
      "count": 1,
    },
    "name": Object {
      "count": 1,
    },
    "type": Object {
      "count": 1,
    },
    "version": Object {
      "count": 1,
    },
  },
  "/polygon/MI": Object {
    "bounds": Object {
      "count": 1,
    },
    "center": Object {
      "count": 1,
    },
    "count": 1,
    "description": Object {
      "count": 1,
    },
    "format": Object {
      "count": 1,
    },
    "maxzoom": Object {
      "count": 1,
    },
    "minzoom": Object {
      "count": 1,
    },
    "modified": Object {
      "count": 1,
    },
    "name": Object {
      "count": 1,
    },
    "type": Object {
      "count": 1,
    },
    "version": Object {
      "count": 1,
    },
  },
  "/polygon/NA": Object {
    "bounds": Object {
      "count": 1,
    },
    "center": Object {
      "count": 1,
    },
    "count": 1,
    "description": Object {
      "count": 1,
    },
    "format": Object {
      "count": 1,
    },
    "maxzoom": Object {
      "count": 1,
    },
    "minzoom": Object {
      "count": 1,
    },
    "modified": Object {
      "count": 1,
    },
    "name": Object {
      "count": 1,
    },
    "type": Object {
      "count": 1,
    },
    "version": Object {
      "count": 1,
    },
  },
  "/polygon/OR": Object {
    "bounds": Object {
      "count": 1,
    },
    "center": Object {
      "count": 1,
    },
    "count": 1,
    "description": Object {
      "count": 1,
    },
    "format": Object {
      "count": 1,
    },
    "maxzoom": Object {
      "count": 1,
    },
    "minzoom": Object {
      "count": 1,
    },
    "modified": Object {
      "count": 1,
    },
    "name": Object {
      "count": 1,
    },
    "type": Object {
      "count": 1,
    },
    "version": Object {
      "count": 1,
    },
  },
  "/polygon/VV": Object {
    "bounds": Object {
      "count": 1,
    },
    "center": Object {
      "count": 1,
    },
    "count": 1,
    "description": Object {
      "count": 1,
    },
    "format": Object {
      "count": 1,
    },
    "maxzoom": Object {
      "count": 1,
    },
    "minzoom": Object {
      "count": 1,
    },
    "modified": Object {
      "count": 1,
    },
    "name": Object {
      "count": 1,
    },
    "type": Object {
      "count": 1,
    },
    "version": Object {
      "count": 1,
    },
  },
  "/terrain/normals": Object {
    "bounds": Object {
      "count": 1,
    },
    "count": 1,
    "format": Object {
      "count": 1,
    },
    "maxzoom": Object {
      "count": 1,
    },
    "minzoom": Object {
      "count": 1,
    },
    "modified": Object {
      "count": 1,
    },
  },
  "/terrain/terrarium": Object {
    "bounds": Object {
      "count": 1,
    },
    "count": 1,
    "format": Object {
      "count": 1,
    },
    "maxzoom": Object {
      "count": 1,
    },
    "minzoom": Object {
      "count": 1,
    },
    "modified": Object {
      "count": 1,
    },
  },
  "_": Object {
    "bounds": Object {
      "count": 5475,
    },
    "center": Object {
      "count": 5473,
    },
    "count": 5475,
    "description": Object {
      "count": 5475,
    },
    "format": Object {
      "count": 5475,
    },
    "maxzoom": Object {
      "count": 5475,
    },
    "minzoom": Object {
      "count": 5475,
    },
    "modified": Object {
      "count": 5475,
    },
    "name": Object {
      "count": 5475,
    },
    "type": Object {
      "count": 5475,
    },
    "version": Object {
      "count": 5475,
    },
  },
}
`;

exports[`data/inn_statistikk.json har antall rader 1`] = `4267`;

exports[`data/inn_statistikk.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "_": Object {
      "area": Object {
        "count": 4267,
      },
      "areas": Object {
        "count": 4267,
      },
      "count": 4267,
      "observedSpecies": Object {
        "count": 4267,
      },
    },
    "count": 4267,
  },
}
`;

exports[`data/kodehierarki.json har antall rader 1`] = `2`;

exports[`data/kodehierarki.json har forventede nøkler 1`] = `
Object {
  "barn": Object {
    "_": Object {
      "_": Object {
        "count": 180049,
      },
      "count": 31627,
    },
    "count": 1,
    "~": Object {
      "_": Object {
        "count": 11,
      },
      "count": 1,
    },
  },
  "foreldre": Object {
    "_": Object {
      "_": Object {
        "count": 180060,
      },
      "count": 180059,
    },
    "count": 1,
    "~": Object {
      "count": 1,
    },
  },
}
`;

exports[`data/la.csv.json har antall rader 1`] = `297`;

exports[`data/la.csv.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "_": Object {
      "count": 4752,
    },
    "basic type": Object {
      "count": 297,
    },
    "count": 297,
    "field7": Object {
      "count": 297,
    },
    "htg": Object {
      "count": 297,
    },
    "name": Object {
      "count": 297,
    },
    "naturlandskap": Object {
      "count": 297,
    },
    "nivå": Object {
      "count": 297,
    },
  },
}
`;

exports[`data/la.json har antall rader 1`] = `297`;

exports[`data/la.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "_": Object {
      "count": 297,
    },
    "count": 297,
    "naturlandskap": Object {
      "count": 297,
    },
    "relasjoner": Object {
      "_": Object {
        "count": 1555,
        "kant": Object {
          "count": 1555,
        },
        "kantRetur": Object {
          "count": 1555,
        },
        "kode": Object {
          "count": 1555,
        },
      },
      "count": 288,
    },
    "tittel": Object {
      "_": Object {
        "count": 594,
      },
      "count": 297,
    },
  },
}
`;

exports[`data/la_klg.csv.json har antall rader 1`] = `38`;

exports[`data/la_klg.csv.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "_": Object {
      "count": 190,
    },
    "count": 38,
    "field2": Object {
      "count": 38,
    },
    "kode": Object {
      "count": 38,
    },
    "nivå": Object {
      "count": 38,
    },
    "trinn": Object {
      "count": 38,
    },
  },
}
`;

exports[`data/la_klg.json har antall rader 1`] = `50`;

exports[`data/la_klg.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 50,
    "max": Object {
      "count": 38,
    },
    "min": Object {
      "count": 38,
    },
    "tittel": Object {
      "_": Object {
        "count": 50,
      },
      "count": 50,
    },
  },
}
`;

exports[`data/mangler_data.json har antall rader 1`] = `4333`;

exports[`data/mangler_data.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 4333,
  },
}
`;

exports[`data/metabase.json har antall rader 1`] = `374515`;

exports[`data/metabase.json har forventede nøkler 1`] = `
Object {
  "@": Object {
    "barn": Object {
      "_": Object {
        "count": 8,
        "skjul": Object {
          "count": 1,
        },
        "sortering": Object {
          "count": 7,
        },
        "tittel": Object {
          "_": Object {
            "count": 8,
          },
          "count": 8,
        },
      },
      "count": 1,
    },
    "count": 1,
    "index": Object {
      "count": 1,
    },
    "kode": Object {
      "count": 1,
    },
    "overordnet": Object {
      "count": 1,
    },
    "tittel": Object {
      "_": Object {
        "count": 1,
      },
      "count": 1,
    },
  },
  "_": Object {
    "@": Object {
      "_": Object {
        "_": Object {
          "count": 395939,
          "sti": Object {
            "count": 395939,
          },
          "tittel": Object {
            "_": Object {
              "count": 614463,
            },
            "count": 395939,
          },
        },
        "count": 374506,
        "~": Object {
          "count": 2,
          "sti": Object {
            "count": 2,
          },
          "tittel": Object {
            "_": Object {
              "count": 2,
            },
            "count": 2,
          },
        },
      },
      "barn": Object {
        "_": Object {
          "count": 38,
          "tittel": Object {
            "_": Object {
              "count": 72,
            },
            "count": 38,
          },
        },
        "count": 8,
      },
      "bbox": Object {
        "_": Object {
          "_": Object {
            "count": 28,
          },
          "count": 14,
        },
        "count": 7,
      },
      "count": 374514,
      "farge": Object {
        "count": 7,
      },
      "formats": Object {
        "count": 7,
        "polygon": Object {
          "count": 7,
        },
      },
      "graf": Object {
        "count": 5,
        "publiseres av": Object {
          "_": Object {
            "count": 6,
            "erSubset": Object {
              "count": 6,
            },
            "farge": Object {
              "count": 6,
            },
            "tittel": Object {
              "_": Object {
                "count": 7,
              },
              "count": 6,
            },
          },
          "count": 5,
        },
      },
      "index": Object {
        "count": 8,
      },
      "infoUrl": Object {
        "count": 5,
      },
      "ingress": Object {
        "count": 6,
      },
      "kode": Object {
        "count": 8,
      },
      "overordnet": Object {
        "_": Object {
          "count": 8,
          "kode": Object {
            "count": 8,
          },
          "tittel": Object {
            "_": Object {
              "count": 8,
            },
            "count": 8,
          },
        },
        "count": 8,
      },
      "skjul": Object {
        "count": 1,
      },
      "sortering": Object {
        "count": 7,
      },
      "stats": Object {
        "areal": Object {
          "count": 5,
        },
        "arealPrefix": Object {
          "count": 5,
        },
        "count": 5,
        "geometrier": Object {
          "count": 5,
        },
        "geometrierPrefix": Object {
          "count": 5,
        },
      },
      "tittel": Object {
        "_": Object {
          "count": 8,
        },
        "count": 8,
      },
      "utenRamme": Object {
        "count": 2,
      },
      "zoom": Object {
        "_": Object {
          "count": 14,
        },
        "count": 7,
      },
    },
    "_": Object {
      "@": Object {
        "_": Object {
          "count": 13,
        },
        "barn": Object {
          "_": Object {
            "count": 171460,
            "tittel": Object {
              "_": Object {
                "count": 244269,
              },
              "count": 171460,
            },
          },
          "count": 173934,
        },
        "betegnelse": Object {
          "_": Object {
            "count": 2865,
          },
          "count": 2865,
        },
        "count": 173934,
        "data": Object {
          "areal": Object {
            "count": 2865,
          },
          "count": 2865,
          "forvaltningsmyndighet": Object {
            "count": 2865,
          },
          "iucn": Object {
            "count": 2819,
          },
          "revisjonsdato": Object {
            "count": 320,
          },
          "truetvurdering": Object {
            "count": 2794,
          },
          "vernedato": Object {
            "count": 2865,
          },
          "verneform": Object {
            "count": 2865,
          },
          "verneplan": Object {
            "count": 2865,
          },
        },
        "farge": Object {
          "count": 2892,
        },
        "graf": Object {
          "count": 3870,
          "forvaltes av": Object {
            "_": Object {
              "count": 2865,
              "erSubset": Object {
                "count": 2865,
              },
              "farge": Object {
                "count": 2865,
              },
              "tittel": Object {
                "_": Object {
                  "count": 2865,
                },
                "count": 2865,
              },
            },
            "count": 2865,
          },
          "habitat": Object {
            "count": 1001,
          },
          "publisererer": Object {
            "_": Object {
              "count": 6,
              "erSubset": Object {
                "count": 6,
              },
              "farge": Object {
                "count": 6,
              },
              "tittel": Object {
                "_": Object {
                  "count": 6,
                },
                "count": 6,
              },
            },
            "count": 4,
          },
          "truet vurdering": Object {
            "_": Object {
              "count": 2748,
              "erSubset": Object {
                "count": 2748,
              },
              "farge": Object {
                "count": 2748,
              },
              "tittel": Object {
                "_": Object {
                  "count": 2748,
                },
                "count": 2748,
              },
            },
            "count": 2748,
          },
          "verneform": Object {
            "_": Object {
              "count": 2865,
              "erSubset": Object {
                "count": 2865,
              },
              "farge": Object {
                "count": 2865,
              },
              "tittel": Object {
                "_": Object {
                  "count": 2865,
                },
                "count": 2865,
              },
            },
            "count": 2865,
          },
          "verneplan": Object {
            "_": Object {
              "count": 2865,
              "erSubset": Object {
                "count": 2865,
              },
              "farge": Object {
                "count": 2865,
              },
              "tittel": Object {
                "_": Object {
                  "count": 2865,
                },
                "count": 2865,
              },
            },
            "count": 2865,
          },
        },
        "index": Object {
          "count": 173934,
        },
        "infoUrl": Object {
          "count": 173915,
        },
        "ingress": Object {
          "count": 11,
        },
        "kode": Object {
          "count": 173934,
        },
        "metaUrl": Object {
          "count": 7,
        },
        "naturlandskap": Object {
          "count": 13,
        },
        "overordnet": Object {
          "_": Object {
            "count": 1547235,
            "kode": Object {
              "count": 1547235,
            },
            "tittel": Object {
              "_": Object {
                "count": 3189543,
              },
              "count": 1547235,
            },
          },
          "count": 173934,
        },
        "relasjoner": Object {
          "_": Object {
            "count": 26,
            "kant": Object {
              "count": 26,
            },
            "kantRetur": Object {
              "count": 26,
            },
            "kode": Object {
              "count": 26,
            },
          },
          "count": 5,
        },
        "stats": Object {
          "areal": Object {
            "count": 2704,
          },
          "arealPrefix": Object {
            "count": 2704,
          },
          "count": 2704,
          "geometrier": Object {
            "count": 2704,
          },
          "geometrierPrefix": Object {
            "count": 2704,
          },
        },
        "tittel": Object {
          "_": Object {
            "count": 246487,
          },
          "count": 173934,
        },
        "url": Object {
          "count": 171042,
        },
      },
      "_": Object {
        "@": Object {
          "_": Object {
            "count": 284,
          },
          "barn": Object {
            "_": Object {
              "count": 439,
              "tittel": Object {
                "_": Object {
                  "count": 439,
                },
                "count": 439,
              },
            },
            "count": 417,
          },
          "count": 417,
          "farge": Object {
            "count": 417,
          },
          "graf": Object {
            "count": 39,
            "forvalter": Object {
              "_": Object {
                "count": 2865,
                "erSubset": Object {
                  "count": 2865,
                },
                "farge": Object {
                  "count": 2865,
                },
                "tittel": Object {
                  "_": Object {
                    "count": 2865,
                  },
                  "count": 2865,
                },
              },
              "count": 6,
            },
            "truet vurdering": Object {
              "_": Object {
                "count": 2748,
                "erSubset": Object {
                  "count": 2748,
                },
                "farge": Object {
                  "count": 2748,
                },
                "tittel": Object {
                  "_": Object {
                    "count": 2748,
                  },
                  "count": 2748,
                },
              },
              "count": 4,
            },
            "verneform": Object {
              "_": Object {
                "count": 2865,
                "erSubset": Object {
                  "count": 2865,
                },
                "farge": Object {
                  "count": 2865,
                },
                "tittel": Object {
                  "_": Object {
                    "count": 2865,
                  },
                  "count": 2865,
                },
              },
              "count": 20,
            },
            "verneplan": Object {
              "_": Object {
                "count": 2865,
                "erSubset": Object {
                  "count": 2865,
                },
                "farge": Object {
                  "count": 2865,
                },
                "tittel": Object {
                  "_": Object {
                    "count": 2865,
                  },
                  "count": 2865,
                },
              },
              "count": 10,
            },
          },
          "index": Object {
            "count": 417,
          },
          "infoUrl": Object {
            "count": 6,
          },
          "ingress": Object {
            "count": 6,
          },
          "kode": Object {
            "count": 417,
          },
          "naturlandskap": Object {
            "count": 284,
          },
          "overordnet": Object {
            "_": Object {
              "count": 1251,
              "kode": Object {
                "count": 1251,
              },
              "tittel": Object {
                "_": Object {
                  "count": 1541,
                },
                "count": 1251,
              },
            },
            "count": 417,
          },
          "relasjoner": Object {
            "_": Object {
              "count": 1529,
              "kant": Object {
                "count": 1529,
              },
              "kantRetur": Object {
                "count": 1529,
              },
              "kode": Object {
                "count": 1529,
              },
            },
            "count": 283,
          },
          "tittel": Object {
            "_": Object {
              "count": 707,
            },
            "count": 417,
          },
        },
        "_": Object {
          "@": Object {
            "barn": Object {
              "count": 440,
            },
            "count": 440,
            "farge": Object {
              "count": 440,
            },
            "graf": Object {
              "count": 18,
              "forvalter": Object {
                "count": 18,
              },
            },
            "index": Object {
              "count": 440,
            },
            "kode": Object {
              "count": 440,
            },
            "overordnet": Object {
              "_": Object {
                "count": 1759,
                "kode": Object {
                  "count": 1759,
                },
                "tittel": Object {
                  "_": Object {
                    "count": 1759,
                  },
                  "count": 1759,
                },
              },
              "count": 440,
            },
            "tittel": Object {
              "_": Object {
                "count": 440,
              },
              "count": 440,
            },
          },
          "count": 440,
        },
        "count": 418,
      },
      "count": 173934,
    },
    "count": 374514,
    "klg": Object {
      "_": Object {
        "@": Object {
          "barn": Object {
            "_": Object {
              "count": 24,
              "tittel": Object {
                "_": Object {
                  "count": 24,
                },
                "count": 24,
              },
            },
            "count": 8,
          },
          "count": 8,
          "farge": Object {
            "count": 8,
          },
          "index": Object {
            "count": 8,
          },
          "kode": Object {
            "count": 8,
          },
          "overordnet": Object {
            "_": Object {
              "count": 24,
              "kode": Object {
                "count": 24,
              },
              "tittel": Object {
                "_": Object {
                  "count": 32,
                },
                "count": 24,
              },
            },
            "count": 8,
          },
          "tittel": Object {
            "_": Object {
              "count": 8,
            },
            "count": 8,
          },
        },
        "_": Object {
          "@": Object {
            "barn": Object {
              "_": Object {
                "count": 11,
                "tittel": Object {
                  "_": Object {
                    "count": 11,
                  },
                  "count": 11,
                },
              },
              "count": 26,
            },
            "count": 26,
            "farge": Object {
              "count": 26,
            },
            "index": Object {
              "count": 26,
            },
            "kode": Object {
              "count": 26,
            },
            "max": Object {
              "count": 23,
            },
            "min": Object {
              "count": 23,
            },
            "overordnet": Object {
              "_": Object {
                "count": 102,
                "kode": Object {
                  "count": 102,
                },
                "tittel": Object {
                  "_": Object {
                    "count": 128,
                  },
                  "count": 102,
                },
              },
              "count": 26,
            },
            "tittel": Object {
              "_": Object {
                "count": 26,
              },
              "count": 26,
            },
          },
          "_": Object {
            "@": Object {
              "barn": Object {
                "_": Object {
                  "count": 4,
                  "tittel": Object {
                    "_": Object {
                      "count": 4,
                    },
                    "count": 4,
                  },
                },
                "count": 12,
              },
              "count": 12,
              "farge": Object {
                "count": 12,
              },
              "index": Object {
                "count": 12,
              },
              "kode": Object {
                "count": 12,
              },
              "max": Object {
                "count": 11,
              },
              "min": Object {
                "count": 11,
              },
              "overordnet": Object {
                "_": Object {
                  "count": 50,
                  "kode": Object {
                    "count": 50,
                  },
                  "tittel": Object {
                    "_": Object {
                      "count": 62,
                    },
                    "count": 50,
                  },
                },
                "count": 12,
              },
              "tittel": Object {
                "_": Object {
                  "count": 12,
                },
                "count": 12,
              },
            },
            "_": Object {
              "@": Object {
                "barn": Object {
                  "count": 4,
                },
                "count": 4,
                "farge": Object {
                  "count": 4,
                },
                "index": Object {
                  "count": 4,
                },
                "kode": Object {
                  "count": 4,
                },
                "max": Object {
                  "count": 4,
                },
                "min": Object {
                  "count": 4,
                },
                "overordnet": Object {
                  "_": Object {
                    "count": 16,
                    "kode": Object {
                      "count": 16,
                    },
                    "tittel": Object {
                      "_": Object {
                        "count": 20,
                      },
                      "count": 16,
                    },
                  },
                  "count": 4,
                },
                "tittel": Object {
                  "_": Object {
                    "count": 4,
                  },
                  "count": 4,
                },
              },
              "count": 4,
            },
            "count": 12,
          },
          "count": 27,
        },
        "count": 9,
      },
      "count": 1,
    },
  },
}
`;

exports[`data/metabase_bbox.json har antall rader 1`] = `175727`;

exports[`data/metabase_bbox.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "_": Object {
      "count": 297,
    },
    "bbox": Object {
      "_": Object {
        "_": Object {
          "count": 28,
        },
        "count": 14,
      },
      "count": 7,
    },
    "betegnelse": Object {
      "_": Object {
        "count": 2865,
      },
      "count": 2865,
    },
    "count": 175726,
    "data": Object {
      "areal": Object {
        "count": 2865,
      },
      "count": 2865,
      "forvaltningsmyndighet": Object {
        "count": 2865,
      },
      "iucn": Object {
        "count": 2819,
      },
      "revisjonsdato": Object {
        "count": 320,
      },
      "truetvurdering": Object {
        "count": 2794,
      },
      "vernedato": Object {
        "count": 2865,
      },
      "verneform": Object {
        "count": 2865,
      },
      "verneplan": Object {
        "count": 2865,
      },
    },
    "farge": Object {
      "count": 4683,
    },
    "foreldre": Object {
      "_": Object {
        "count": 175726,
      },
      "count": 175726,
    },
    "formats": Object {
      "count": 7,
      "polygon": Object {
        "count": 7,
      },
    },
    "graf": Object {
      "count": 3932,
      "forvalter": Object {
        "_": Object {
          "count": 2865,
          "erSubset": Object {
            "count": 2865,
          },
          "tittel": Object {
            "_": Object {
              "count": 2865,
            },
            "count": 2865,
          },
        },
        "count": 24,
      },
      "forvaltes av": Object {
        "_": Object {
          "count": 2865,
          "erSubset": Object {
            "count": 2865,
          },
          "tittel": Object {
            "_": Object {
              "count": 2865,
            },
            "count": 2865,
          },
        },
        "count": 2865,
      },
      "habitat": Object {
        "count": 1001,
      },
      "publisererer": Object {
        "_": Object {
          "count": 6,
          "erSubset": Object {
            "count": 6,
          },
          "tittel": Object {
            "_": Object {
              "count": 6,
            },
            "count": 6,
          },
        },
        "count": 4,
      },
      "publiseres av": Object {
        "_": Object {
          "count": 6,
          "erSubset": Object {
            "count": 6,
          },
          "tittel": Object {
            "_": Object {
              "count": 7,
            },
            "count": 6,
          },
        },
        "count": 5,
      },
      "truet vurdering": Object {
        "_": Object {
          "count": 5496,
          "erSubset": Object {
            "count": 5496,
          },
          "tittel": Object {
            "_": Object {
              "count": 5496,
            },
            "count": 5496,
          },
        },
        "count": 2752,
      },
      "verneform": Object {
        "_": Object {
          "count": 5730,
          "erSubset": Object {
            "count": 5730,
          },
          "tittel": Object {
            "_": Object {
              "count": 5730,
            },
            "count": 5730,
          },
        },
        "count": 2885,
      },
      "verneplan": Object {
        "_": Object {
          "count": 5730,
          "erSubset": Object {
            "count": 5730,
          },
          "tittel": Object {
            "_": Object {
              "count": 5730,
            },
            "count": 5730,
          },
        },
        "count": 2875,
      },
    },
    "index": Object {
      "count": 175726,
    },
    "infoUrl": Object {
      "count": 174188,
    },
    "ingress": Object {
      "count": 23,
    },
    "kode": Object {
      "count": 175726,
    },
    "max": Object {
      "count": 38,
    },
    "metaUrl": Object {
      "count": 7,
    },
    "min": Object {
      "count": 38,
    },
    "naturlandskap": Object {
      "count": 297,
    },
    "relasjoner": Object {
      "_": Object {
        "count": 1555,
        "kant": Object {
          "count": 1555,
        },
        "kantRetur": Object {
          "count": 1555,
        },
        "kode": Object {
          "count": 1555,
        },
      },
      "count": 288,
    },
    "skjul": Object {
      "count": 1,
    },
    "sortering": Object {
      "count": 7,
    },
    "stats": Object {
      "areal": Object {
        "count": 2756,
      },
      "arealPrefix": Object {
        "count": 2756,
      },
      "count": 2756,
      "geometrier": Object {
        "count": 2756,
      },
      "geometrierPrefix": Object {
        "count": 2756,
      },
    },
    "tittel": Object {
      "_": Object {
        "count": 248569,
      },
      "count": 175726,
    },
    "url": Object {
      "count": 171042,
    },
    "utenRamme": Object {
      "count": 2,
    },
    "zoom": Object {
      "_": Object {
        "count": 14,
      },
      "count": 7,
    },
  },
  "~": Object {
    "count": 1,
    "foreldre": Object {
      "count": 1,
    },
    "index": Object {
      "count": 1,
    },
    "kode": Object {
      "count": 1,
    },
    "tittel": Object {
      "_": Object {
        "count": 1,
      },
      "count": 1,
    },
  },
}
`;

exports[`data/metabase_med_bbox.json har antall rader 1`] = `180060`;

exports[`data/metabase_med_bbox.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "_": Object {
      "count": 297,
    },
    "bbox": Object {
      "_": Object {
        "_": Object {
          "count": 28,
        },
        "count": 14,
      },
      "count": 7,
    },
    "betegnelse": Object {
      "_": Object {
        "count": 3305,
      },
      "count": 3305,
    },
    "count": 180059,
    "data": Object {
      "areal": Object {
        "count": 2865,
      },
      "count": 2865,
      "forvaltningsmyndighet": Object {
        "count": 2865,
      },
      "iucn": Object {
        "count": 2819,
      },
      "revisjonsdato": Object {
        "count": 320,
      },
      "truetvurdering": Object {
        "count": 2794,
      },
      "vernedato": Object {
        "count": 2865,
      },
      "verneform": Object {
        "count": 2865,
      },
      "verneplan": Object {
        "count": 2865,
      },
    },
    "farge": Object {
      "count": 17,
    },
    "foreldre": Object {
      "_": Object {
        "count": 180060,
      },
      "count": 180059,
    },
    "formats": Object {
      "count": 7,
      "polygon": Object {
        "count": 7,
      },
    },
    "graf": Object {
      "_": Object {
        "_": Object {
          "count": 5235,
          "tittel": Object {
            "_": Object {
              "count": 15134,
            },
            "count": 5235,
          },
        },
        "count": 577,
      },
      "count": 4245,
      "definerer hovedtype": Object {
        "_": Object {
          "count": 184,
          "erSubset": Object {
            "count": 184,
          },
          "tittel": Object {
            "_": Object {
              "count": 184,
            },
            "count": 184,
          },
        },
        "count": 37,
      },
      "definisjonsgrunnlag": Object {
        "_": Object {
          "count": 92,
          "erSubset": Object {
            "count": 92,
          },
          "tittel": Object {
            "_": Object {
              "count": 92,
            },
            "count": 92,
          },
        },
        "count": 92,
      },
      "forvalter": Object {
        "_": Object {
          "count": 2883,
          "erSubset": Object {
            "count": 2883,
          },
          "tittel": Object {
            "_": Object {
              "count": 2883,
            },
            "count": 2883,
          },
        },
        "count": 24,
      },
      "forvaltes av": Object {
        "_": Object {
          "count": 2865,
          "erSubset": Object {
            "count": 2865,
          },
          "tittel": Object {
            "_": Object {
              "count": 2865,
            },
            "count": 2865,
          },
        },
        "count": 2865,
      },
      "habitat": Object {
        "_": Object {
          "count": 4893,
          "erSubset": Object {
            "count": 4893,
          },
          "tittel": Object {
            "_": Object {
              "count": 4893,
            },
            "count": 4893,
          },
        },
        "count": 1001,
      },
      "mengdeart": Object {
        "_": Object {
          "count": 280,
          "tittel": Object {
            "_": Object {
              "count": 817,
            },
            "count": 280,
          },
        },
        "count": 90,
      },
      "prosedyrekategori": Object {
        "_": Object {
          "count": 92,
          "erSubset": Object {
            "count": 92,
          },
          "tittel": Object {
            "_": Object {
              "count": 92,
            },
            "count": 92,
          },
        },
        "count": 92,
      },
      "publisererer": Object {
        "_": Object {
          "count": 7,
          "erSubset": Object {
            "count": 7,
          },
          "tittel": Object {
            "_": Object {
              "count": 7,
            },
            "count": 7,
          },
        },
        "count": 4,
      },
      "publiseres av": Object {
        "_": Object {
          "count": 7,
          "erSubset": Object {
            "count": 7,
          },
          "tittel": Object {
            "_": Object {
              "count": 8,
            },
            "count": 7,
          },
        },
        "count": 6,
      },
      "skilleart": Object {
        "_": Object {
          "count": 47,
          "tittel": Object {
            "_": Object {
              "count": 141,
            },
            "count": 47,
          },
        },
        "count": 13,
      },
      "truet vurdering": Object {
        "_": Object {
          "count": 5496,
          "erSubset": Object {
            "count": 5496,
          },
          "tittel": Object {
            "_": Object {
              "count": 5496,
            },
            "count": 5496,
          },
        },
        "count": 2752,
      },
      "tyngdepunktart": Object {
        "_": Object {
          "count": 584,
          "tittel": Object {
            "_": Object {
              "count": 1657,
            },
            "count": 584,
          },
        },
        "count": 112,
      },
      "verneform": Object {
        "_": Object {
          "count": 5730,
          "erSubset": Object {
            "count": 5730,
          },
          "tittel": Object {
            "_": Object {
              "count": 5730,
            },
            "count": 5730,
          },
        },
        "count": 2885,
      },
      "verneområder som forvaltes av": Object {
        "_": Object {
          "count": 18,
          "erSubset": Object {
            "count": 18,
          },
          "tittel": Object {
            "_": Object {
              "count": 18,
            },
            "count": 18,
          },
        },
        "count": 18,
      },
      "verneplan": Object {
        "_": Object {
          "count": 5730,
          "erSubset": Object {
            "count": 5730,
          },
          "tittel": Object {
            "_": Object {
              "count": 5730,
            },
            "count": 5730,
          },
        },
        "count": 2875,
      },
    },
    "index": Object {
      "count": 180059,
    },
    "infoUrl": Object {
      "count": 174674,
    },
    "ingress": Object {
      "count": 133,
    },
    "max": Object {
      "count": 48,
    },
    "metaUrl": Object {
      "count": 7,
    },
    "min": Object {
      "count": 48,
    },
    "naturlandskap": Object {
      "count": 297,
    },
    "nivå": Object {
      "count": 37,
    },
    "relasjoner": Object {
      "_": Object {
        "count": 1555,
        "kant": Object {
          "count": 1555,
        },
        "kantRetur": Object {
          "count": 1555,
        },
        "kode": Object {
          "count": 1555,
        },
      },
      "count": 288,
    },
    "render": Object {
      "count": 1,
    },
    "skjul": Object {
      "count": 1,
    },
    "sortering": Object {
      "count": 19,
    },
    "stats": Object {
      "areal": Object {
        "count": 3711,
      },
      "arealPrefix": Object {
        "count": 3711,
      },
      "count": 3711,
      "geometrier": Object {
        "count": 3711,
      },
      "geometrierPrefix": Object {
        "count": 3711,
      },
    },
    "tittel": Object {
      "_": Object {
        "count": 252902,
      },
      "count": 180059,
    },
    "type": Object {
      "count": 5,
    },
    "url": Object {
      "count": 171042,
    },
    "utenRamme": Object {
      "count": 20,
    },
    "zoom": Object {
      "_": Object {
        "count": 14,
      },
      "count": 7,
    },
  },
  "~": Object {
    "count": 1,
    "foreldre": Object {
      "count": 1,
    },
    "index": Object {
      "count": 1,
    },
    "tittel": Object {
      "_": Object {
        "count": 1,
      },
      "count": 1,
    },
  },
}
`;

exports[`data/metabase_med_farger.json har antall rader 1`] = `180060`;

exports[`data/metabase_med_farger.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "_": Object {
      "count": 297,
    },
    "bbox": Object {
      "_": Object {
        "_": Object {
          "count": 28,
        },
        "count": 14,
      },
      "count": 7,
    },
    "betegnelse": Object {
      "_": Object {
        "count": 3305,
      },
      "count": 3305,
    },
    "count": 180059,
    "data": Object {
      "areal": Object {
        "count": 2865,
      },
      "count": 2865,
      "forvaltningsmyndighet": Object {
        "count": 2865,
      },
      "iucn": Object {
        "count": 2819,
      },
      "revisjonsdato": Object {
        "count": 320,
      },
      "truetvurdering": Object {
        "count": 2794,
      },
      "vernedato": Object {
        "count": 2865,
      },
      "verneform": Object {
        "count": 2865,
      },
      "verneplan": Object {
        "count": 2865,
      },
    },
    "farge": Object {
      "count": 8997,
    },
    "foreldre": Object {
      "_": Object {
        "count": 180060,
      },
      "count": 180059,
    },
    "formats": Object {
      "count": 7,
      "polygon": Object {
        "count": 7,
      },
    },
    "graf": Object {
      "_": Object {
        "_": Object {
          "count": 5235,
          "tittel": Object {
            "_": Object {
              "count": 15134,
            },
            "count": 5235,
          },
        },
        "count": 577,
      },
      "count": 4245,
      "definerer hovedtype": Object {
        "_": Object {
          "count": 184,
          "erSubset": Object {
            "count": 184,
          },
          "tittel": Object {
            "_": Object {
              "count": 184,
            },
            "count": 184,
          },
        },
        "count": 37,
      },
      "definisjonsgrunnlag": Object {
        "_": Object {
          "count": 92,
          "erSubset": Object {
            "count": 92,
          },
          "tittel": Object {
            "_": Object {
              "count": 92,
            },
            "count": 92,
          },
        },
        "count": 92,
      },
      "forvalter": Object {
        "_": Object {
          "count": 2883,
          "erSubset": Object {
            "count": 2883,
          },
          "tittel": Object {
            "_": Object {
              "count": 2883,
            },
            "count": 2883,
          },
        },
        "count": 24,
      },
      "forvaltes av": Object {
        "_": Object {
          "count": 2865,
          "erSubset": Object {
            "count": 2865,
          },
          "tittel": Object {
            "_": Object {
              "count": 2865,
            },
            "count": 2865,
          },
        },
        "count": 2865,
      },
      "habitat": Object {
        "_": Object {
          "count": 4893,
          "erSubset": Object {
            "count": 4893,
          },
          "tittel": Object {
            "_": Object {
              "count": 4893,
            },
            "count": 4893,
          },
        },
        "count": 1001,
      },
      "mengdeart": Object {
        "_": Object {
          "count": 280,
          "tittel": Object {
            "_": Object {
              "count": 817,
            },
            "count": 280,
          },
        },
        "count": 90,
      },
      "prosedyrekategori": Object {
        "_": Object {
          "count": 92,
          "erSubset": Object {
            "count": 92,
          },
          "tittel": Object {
            "_": Object {
              "count": 92,
            },
            "count": 92,
          },
        },
        "count": 92,
      },
      "publisererer": Object {
        "_": Object {
          "count": 7,
          "erSubset": Object {
            "count": 7,
          },
          "tittel": Object {
            "_": Object {
              "count": 7,
            },
            "count": 7,
          },
        },
        "count": 4,
      },
      "publiseres av": Object {
        "_": Object {
          "count": 7,
          "erSubset": Object {
            "count": 7,
          },
          "tittel": Object {
            "_": Object {
              "count": 8,
            },
            "count": 7,
          },
        },
        "count": 6,
      },
      "skilleart": Object {
        "_": Object {
          "count": 47,
          "tittel": Object {
            "_": Object {
              "count": 141,
            },
            "count": 47,
          },
        },
        "count": 13,
      },
      "truet vurdering": Object {
        "_": Object {
          "count": 5496,
          "erSubset": Object {
            "count": 5496,
          },
          "tittel": Object {
            "_": Object {
              "count": 5496,
            },
            "count": 5496,
          },
        },
        "count": 2752,
      },
      "tyngdepunktart": Object {
        "_": Object {
          "count": 584,
          "tittel": Object {
            "_": Object {
              "count": 1657,
            },
            "count": 584,
          },
        },
        "count": 112,
      },
      "verneform": Object {
        "_": Object {
          "count": 5730,
          "erSubset": Object {
            "count": 5730,
          },
          "tittel": Object {
            "_": Object {
              "count": 5730,
            },
            "count": 5730,
          },
        },
        "count": 2885,
      },
      "verneområder som forvaltes av": Object {
        "_": Object {
          "count": 18,
          "erSubset": Object {
            "count": 18,
          },
          "tittel": Object {
            "_": Object {
              "count": 18,
            },
            "count": 18,
          },
        },
        "count": 18,
      },
      "verneplan": Object {
        "_": Object {
          "count": 5730,
          "erSubset": Object {
            "count": 5730,
          },
          "tittel": Object {
            "_": Object {
              "count": 5730,
            },
            "count": 5730,
          },
        },
        "count": 2875,
      },
    },
    "index": Object {
      "count": 180059,
    },
    "infoUrl": Object {
      "count": 174674,
    },
    "ingress": Object {
      "count": 133,
    },
    "max": Object {
      "count": 48,
    },
    "metaUrl": Object {
      "count": 7,
    },
    "min": Object {
      "count": 48,
    },
    "naturlandskap": Object {
      "count": 297,
    },
    "nivå": Object {
      "count": 37,
    },
    "relasjoner": Object {
      "_": Object {
        "count": 1555,
        "kant": Object {
          "count": 1555,
        },
        "kantRetur": Object {
          "count": 1555,
        },
        "kode": Object {
          "count": 1555,
        },
      },
      "count": 288,
    },
    "render": Object {
      "count": 1,
    },
    "skjul": Object {
      "count": 1,
    },
    "sortering": Object {
      "count": 19,
    },
    "stats": Object {
      "areal": Object {
        "count": 3711,
      },
      "arealPrefix": Object {
        "count": 3711,
      },
      "count": 3711,
      "geometrier": Object {
        "count": 3711,
      },
      "geometrierPrefix": Object {
        "count": 3711,
      },
    },
    "tittel": Object {
      "_": Object {
        "count": 252902,
      },
      "count": 180059,
    },
    "type": Object {
      "count": 5,
    },
    "url": Object {
      "count": 171042,
    },
    "utenRamme": Object {
      "count": 20,
    },
    "zoom": Object {
      "_": Object {
        "count": 14,
      },
      "count": 7,
    },
  },
  "~": Object {
    "count": 1,
    "foreldre": Object {
      "count": 1,
    },
    "index": Object {
      "count": 1,
    },
    "tittel": Object {
      "_": Object {
        "count": 1,
      },
      "count": 1,
    },
  },
}
`;

exports[`data/mi_variasjon.json har antall rader 1`] = `2909`;

exports[`data/mi_variasjon.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 2909,
    "tittel": Object {
      "_": Object {
        "count": 2909,
      },
      "count": 2909,
    },
  },
}
`;

exports[`data/na_definisjonsgrunnlag.json har antall rader 1`] = `20`;

exports[`data/na_definisjonsgrunnlag.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 20,
    "foreldre": Object {
      "_": Object {
        "count": 20,
      },
      "count": 20,
    },
    "nivå": Object {
      "count": 20,
    },
    "tittel": Object {
      "_": Object {
        "count": 20,
      },
      "count": 20,
    },
  },
}
`;

exports[`data/na_hovedtype.json har antall rader 1`] = `92`;

exports[`data/na_hovedtype.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 92,
    "definisjonsgrunnlag": Object {
      "count": 92,
      "kode": Object {
        "count": 92,
      },
      "tittel": Object {
        "_": Object {
          "count": 92,
        },
        "count": 92,
      },
    },
    "kunnskap": Object {
      "count": 92,
      "generelt": Object {
        "count": 92,
        "kode": Object {
          "count": 92,
        },
        "verdi": Object {
          "count": 92,
        },
      },
      "inndeling": Object {
        "count": 92,
        "kode": Object {
          "count": 92,
        },
        "verdi": Object {
          "count": 92,
        },
      },
    },
    "lkm": Object {
      "count": 92,
      "d": Object {
        "_": Object {
          "count": 91,
        },
        "count": 92,
      },
      "h": Object {
        "_": Object {
          "count": 64,
        },
        "count": 92,
      },
      "t": Object {
        "_": Object {
          "count": 131,
        },
        "count": 92,
      },
      "u": Object {
        "_": Object {
          "count": 157,
        },
        "count": 92,
      },
    },
    "nin1": Object {
      "count": 92,
    },
    "nivå": Object {
      "count": 92,
    },
    "prosedyrekategori": Object {
      "count": 92,
      "kode": Object {
        "count": 92,
      },
      "tittel": Object {
        "_": Object {
          "count": 92,
        },
        "count": 92,
      },
    },
  },
}
`;

exports[`data/na_hovedtype_relasjon.json har antall rader 1`] = `92`;

exports[`data/na_hovedtype_relasjon.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 92,
    "relasjon": Object {
      "_": Object {
        "count": 627,
        "erSubset": Object {
          "count": 627,
        },
        "kant": Object {
          "count": 627,
        },
        "kantRetur": Object {
          "count": 627,
        },
        "kode": Object {
          "count": 627,
        },
      },
      "count": 92,
    },
  },
}
`;

exports[`data/na_kode.json har antall rader 1`] = `1796`;

exports[`data/na_kode.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 1796,
    "ingress": Object {
      "count": 100,
    },
    "tittel": Object {
      "_": Object {
        "count": 1796,
      },
      "count": 1796,
    },
  },
}
`;

exports[`data/na_mi_liste.json har antall rader 1`] = `4705`;

exports[`data/na_mi_liste.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 4705,
    "foreldre": Object {
      "_": Object {
        "count": 852,
      },
      "count": 851,
    },
    "infoUrl": Object {
      "count": 737,
    },
    "ingress": Object {
      "count": 100,
    },
    "tittel": Object {
      "_": Object {
        "count": 4705,
      },
      "count": 4705,
    },
  },
}
`;

exports[`data/na_overstyr_hierarki.json har antall rader 1`] = `851`;

exports[`data/na_overstyr_hierarki.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "_": Object {
      "count": 852,
    },
    "count": 851,
  },
}
`;

exports[`data/na_prosedyrekategori.json har antall rader 1`] = `17`;

exports[`data/na_prosedyrekategori.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 17,
    "foreldre": Object {
      "_": Object {
        "count": 17,
      },
      "count": 17,
    },
    "nivå": Object {
      "count": 17,
    },
    "tittel": Object {
      "_": Object {
        "count": 17,
      },
      "count": 17,
    },
  },
}
`;

exports[`data/or_organisasjon.json har antall rader 1`] = `7`;

exports[`data/or_organisasjon.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 7,
    "farge": Object {
      "count": 7,
    },
    "infoUrl": Object {
      "count": 7,
    },
    "ingress": Object {
      "count": 7,
    },
    "metaUrl": Object {
      "count": 7,
    },
    "relasjon": Object {
      "_": Object {
        "count": 14,
        "erSubset": Object {
          "count": 14,
        },
        "kant": Object {
          "count": 14,
        },
        "kantRetur": Object {
          "count": 14,
        },
        "kode": Object {
          "count": 14,
        },
      },
      "count": 7,
    },
    "tittel": Object {
      "_": Object {
        "count": 8,
      },
      "count": 7,
    },
  },
}
`;

exports[`data/pr_prosjekt.json har antall rader 1`] = `0`;

exports[`data/pr_prosjekt.json har forventede nøkler 1`] = `Object {}`;

exports[`data/statistikk.json har antall rader 1`] = `4267`;

exports[`data/statistikk.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 4267,
    "stats": Object {
      "areal": Object {
        "count": 4267,
      },
      "arealPrefix": Object {
        "count": 4267,
      },
      "count": 4267,
      "geometrier": Object {
        "count": 4267,
      },
      "geometrierPrefix": Object {
        "count": 4267,
      },
    },
  },
}
`;

exports[`data/vv_med_kommune.json har antall rader 1`] = `2865`;

exports[`data/vv_med_kommune.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 2865,
    "geometry": Object {
      "coordinates": Object {
        "_": Object {
          "_": Object {
            "_": Object {
              "_": Object {
                "count": 4738,
              },
              "count": 2203221,
            },
            "count": 1100430,
          },
          "count": 3336,
        },
        "count": 2865,
      },
      "count": 2865,
      "type": Object {
        "count": 2865,
      },
    },
    "properties": Object {
      "FORVALTNI": Object {
        "count": 2865,
      },
      "IID": Object {
        "count": 2865,
      },
      "IUCN": Object {
        "count": 2865,
      },
      "MOBLANDPRI": Object {
        "count": 2865,
      },
      "OMRADENAVN": Object {
        "count": 2865,
      },
      "REVISJON": Object {
        "count": 2865,
      },
      "TRUETVURD": Object {
        "count": 2865,
      },
      "VERNEDATO": Object {
        "count": 2865,
      },
      "VERNEFORM": Object {
        "count": 2865,
      },
      "VERNEPLAN": Object {
        "count": 2865,
      },
      "_": Object {
        "count": 5730,
      },
      "count": 2865,
      "kommune": Object {
        "_": Object {
          "count": 3375,
        },
        "count": 2865,
      },
    },
    "type": Object {
      "count": 2865,
    },
  },
}
`;

exports[`data/vv_naturvernområde.json har antall rader 1`] = `2865`;

exports[`data/vv_naturvernområde.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "betegnelse": Object {
      "_": Object {
        "count": 2865,
      },
      "count": 2865,
    },
    "count": 2865,
    "data": Object {
      "areal": Object {
        "count": 2865,
      },
      "count": 2865,
      "forvaltningsmyndighet": Object {
        "count": 2865,
      },
      "iucn": Object {
        "count": 2819,
      },
      "revisjonsdato": Object {
        "count": 320,
      },
      "truetvurdering": Object {
        "count": 2794,
      },
      "vernedato": Object {
        "count": 2865,
      },
      "verneform": Object {
        "count": 2865,
      },
      "verneplan": Object {
        "count": 2865,
      },
    },
    "infoUrl": Object {
      "count": 2865,
    },
    "relasjon": Object {
      "_": Object {
        "count": 25439,
        "erSubset": Object {
          "count": 25439,
        },
        "kant": Object {
          "count": 25439,
        },
        "kantRetur": Object {
          "count": 25439,
        },
        "kode": Object {
          "count": 25439,
        },
      },
      "count": 2865,
    },
    "tittel": Object {
      "_": Object {
        "count": 2865,
      },
      "count": 2865,
    },
  },
}
`;

exports[`data/vv_verneområde_geojson.json har antall rader 1`] = `2865`;

exports[`data/vv_verneområde_geojson.json har forventede nøkler 1`] = `
Object {
  "_": Object {
    "count": 2865,
    "geometry": Object {
      "coordinates": Object {
        "_": Object {
          "_": Object {
            "_": Object {
              "_": Object {
                "count": 4738,
              },
              "count": 2203221,
            },
            "count": 1100430,
          },
          "count": 3336,
        },
        "count": 2865,
      },
      "count": 2865,
      "type": Object {
        "count": 2865,
      },
    },
    "properties": Object {
      "FORVALTNI": Object {
        "count": 2865,
      },
      "IID": Object {
        "count": 2865,
      },
      "IUCN": Object {
        "count": 2865,
      },
      "MOBLANDPRI": Object {
        "count": 2865,
      },
      "OMRADENAVN": Object {
        "count": 2865,
      },
      "REVISJON": Object {
        "count": 2865,
      },
      "TRUETVURD": Object {
        "count": 2865,
      },
      "VERNEDATO": Object {
        "count": 2865,
      },
      "VERNEFORM": Object {
        "count": 2865,
      },
      "VERNEPLAN": Object {
        "count": 2865,
      },
      "_": Object {
        "count": 5730,
      },
      "count": 2865,
    },
    "type": Object {
      "count": 2865,
    },
  },
}
`;
